# embedded-rust-playgrounds

./: .gitignore  README.md
emb-01-first-program-251101/: .readme.md
emb-02-light-led-251102/: Cargo.toml  readme.md
emb-03-led-blink-251103/: Cargo.toml
emb-04-led-grid-251104/: Cargo.toml
emb-05-led-line-251106/: Cargo.toml
emb-06-no-std-251108/: Cargo.toml
emb-06-no-std-251108/src/: main.rs
emb-07-memory-layout-251109/: .gitignore  Cargo.toml
emb-08-led-hal-251111/: Cargo.toml
emb-09-gpio-output-251112/: Cargo.toml
emb-10-led-multiplex-251113/: Cargo.toml
emb-11-led-corners-251114/: Cargo.toml
emb-12-timer-delay-251115/: Cargo.toml
emb-13-led-bar-251116/: Cargo.toml
emb-14-led-rotate-251117/: Cargo.toml
emb-15-led-binary-251120/: Cargo.toml
emb-16-button-read-251121/: Cargo.toml
emb-17-button-poll-251122/: Cargo.toml
emb-18-button-debounce-251123/: Cargo.toml
emb-19-led-counter-251124/: Cargo.toml
emb-20-led-game-251127/: Cargo.toml
emb-21-memory-basics-251128/: Cargo.toml
emb-21-memory-basics-251128/src/: main.rs
emb-22-register-typesafe-251129/: Cargo.toml
emb-23-debug-basics-251130/: Cargo.toml
emb-24-debug-sreps-251202/: Cargo.toml
emb-24-debug-steps-251202/: Cargo.toml
emb-25-debug-game-251204/: Cargo.toml
emb-25-debug-phasor-251204/: Cargo.toml
emb-26-serial-minicom-251205/: Cargo.toml
emb-27-uart-byte-251207/: Cargo.toml
emb-28-uart-string-251208/: Cargo.toml
emb-29-uart-write-251210/: Cargo.toml
emb-30-uart-read-251212/: Cargo.toml
emb-31-uart-echo-251214/: Cargo.toml
(+148 files in other folders)
