[package]
name = "emb-06-no-std-251108"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m-rt = "0.7.5"
panic-halt = "1.0.0"
panic-rtt-target = "0.2.0"
rtt-target = "0.6.1"
microbit-v2 = "0.15.1"
embedded-hal = "1.0.0"

[dependencies.cortex-m]
version = "0.7.7"
features = ["inline-asm", "critical-section-single-core"]
